--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2031,6 +2031,13 @@ p span{
         font-size: 12px;
         line-height: 14px;
     }
+    .dots {
+        padding: 0;
+        -webkit-transform: scaleX(.7);
+        transform: scaleX(.4);
+        overflow-x: hidden;
+        margin: 0 -30px 30px -30px;
+    }
 }
 
 @keyframes arrow {
